...
    @IBAction func backpressed() {
        self.navigationController?.popViewControllerAnimated(true)
    }
        
    func createPopAlert() {
        var popover:UIPopoverController?
        let title = "Before you sign out, do you have any suggestions to make NatureNet better?"
        var alert:UIAlertController = UIAlertController(title: title, message: nil, preferredStyle: UIAlertControllerStyle.ActionSheet)
        
        var singoutAction = UIAlertAction(title: "Sign me out", style: UIAlertActionStyle.Destructive) {
            UIAlertAction in
            Session.signOut()
            self.navigationController?.popToRootViewControllerAnimated(true)
        }
        
        var yesAction = UIAlertAction(title: "Leave a design idea", style: UIAlertActionStyle.Default) {
...
