...
                                <color key="backgroundColor" red="0.038127622435359595" green="0.74932922979797978" blue="0.10219779091257809" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="120" id="0Hp-2W-6mm"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <color key="tintColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                <state key="normal" title="Sign In">
                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="signButtonTouchCancel:" destination="vXZ-lx-hvc" eventType="touchCancel" id="f73-DC-SAJ"/>
                                    <action selector="signButtonTouchDown:" destination="vXZ-lx-hvc" eventType="touchDown" id="Jwy-0O-BMR"/>
                                    <action selector="signButtonTouchUp:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="KSp-6a-dGG"/>
...
                                        <rect key="frame" x="0.0" y="337" width="600" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="X6z-4H-M6f" id="RMh-6e-2N5">
                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Sign out" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="x4c-FQ-aNj">
                                                    <rect key="frame" x="15" y="0.0" width="570" height="43"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                    <color key="textColor" red="1" green="0.011788656142404319" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
...
